<resources>
    <string name="app_name">Maths</string>
    <string name="_30_39">30+39</string>
    <string name="_69">69</string>
    <string name="score_10">SCORE:10</string>
    <string name="current_score_30">Current Score:30</string>
    <string name="just_maths">Just Maths</string>
    <string name="abc">abc</string>
    <string name="time_04">TIME:04</string>
    <string name="_75">=75</string>
    <string name="_11_64">11+64</string>
    <string name="score_00">SCORE: 00</string>
    <string name="time_05">TIME : 05</string>
    <string name="todo">TODO</string>

</resources>