<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/btn_correct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="#CA171B"
            android:contentDescription="@string/todo"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:src="@drawable/baseline_done_white_36dp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_incorrect"
            android:layout_weight="1"
            android:background="#CA171B"
            android:src="@drawable/baseline_close_white_36dp"
            android:layout_marginStart="1dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:id="@+id/top_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_05"
            android:id="@+id/txt_time"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#CA171B"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score_00"
            android:id="@+id/txt_score"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#CA171B"
            android:textSize="25sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_39"
        android:id="@+id/txt_view_question"
        android:layout_below="@id/top_container"
        android:layout_centerHorizontal="true"
        android:textSize="70sp"
        android:layout_marginTop="100dp"
        android:textIsSelectable="true"
        android:textColor="#1EAF85" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_69"
        android:id="@+id/txt_view_result"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_view_question"
        android:textSize="70sp"
        android:textIsSelectable="true"
        android:textColor="#1EAF85" />

</RelativeLayout>